refactor: 接口收窄+全表扫描→SQL WHERE+密码恒定时间比较
IDeviceAuthQueryService: updateDevice(Device)→updateAuthInfo(id,time,ip)
HazardPointQueryServiceImpl: selectAll+内存过滤→Mapper SQL WHERE
HazardPointMapper: 新增selectByStatusAndDelFlag+selectIdsByGroupIdAndStatus